--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,22 @@ a {
   border-radius: 5px;
 }
 
+.book-text {
+  margin: 30px 0;
+}
+
+.book-title {
+  font-size: 1.1em;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.book-author {
+  margin-top: 5px;
+  font-size: .9em;
+  color: #999;
+}
+
 .add-book-btn {
     position: fixed;
     bottom: 20px;
