--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@ a {
   position: relative;
 }
 .book-list-container {
-  margin: 20px;
+.book-button-root button {
+  width:45px;
+  height: 45px;
 }
 
 .book-list-item-btn {
@@ -23,13 +25,6 @@ a {
   left: 60%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  /* background-color: rgb(6, 138, 33) !important; */
-  color: white;
-  font-size: 16px;
-  padding: 12px 24px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
 }
 
 .book-text {
