--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,14 @@ a {
   margin: 30px 0;
 }
 
+.search-box {
+  width:80%;
+}
+
+#search {
+  font-size: 2em;
+}
+
 .book-title {
   font-size: 1.1em;
   font-weight: bold;
